--- a/circle/common.css
+++ b/circle/common.css
@@ -8,7 +8,7 @@
         変更した際は、gitのコミットメッセージお願いします。
 ---------------------------------------------- */
 
-@charset "ut-8";
+@charset "utf-8";
 
 /* ⭐️背景色（変更可能） */
 body {
